--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       <!-- DOWNLOAD SECTION: Bottom CTA -->
       <section class="download-section">
         <div class="download-content">
-          <h1 class="download-heading" >Try Cursor now.</h1>
+          <h1 class="download-heading">Try Cursor now.</h1>
           <div class="download-buttons">
             <button class="download-btn btn">Download for Linux ↓</button>
           </div>
@@ -484,14 +484,26 @@
           </div>
         </div>
 
-        <!-- Footer bottom -->
         <div class="footer-bottom">
           <div class="footer-left">
-            © 2026 Cursor &nbsp; · &nbsp; SOC 2 Certified
+            © 2026 Anysphere, Inc. · SOC 2 Certified
           </div>
 
           <div class="footer-right">
-            <button class="lang-btn">🌐 English</button>
+            <div class="control-pill">
+              <button>💻</button>
+              <button>☉</button>
+              <button>☾</button>
+            </div>
+
+            <div class="language-select">
+              <span>🌐</span>
+              <select>
+                <option>English</option>
+                <option>简体中文</option>
+                <option>繁體中文</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
