Clean up HTML and CSS comments, restructure the join section, and add VS Code settings.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cursor</title>
-    <!-- Linking external stylesheet -->
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./utilities/cursor.png" type="image/jpeg" />
   </head>
   <body>
-    <!-- HEADER SECTION: Contains Navigation Bar -->
     <header class="header">
       <nav class="nav">
-        <!-- LEFT: Logo and Branding -->
         <div class="logo">
-          <!-- Video logo shown on hover -->
           <video class="video" muted autoplay loop playsinline>
             <source src="./utilities/logo-dark-theme.mp4" type="video/mp4" />
           </video>
@@ -22,7 +18,6 @@
           <img src="./utilities/cursor-text.png" class="logo-text" />
         </div>
 
-        <!-- CENTER: Main Navigation Links -->
         <div class="nav-mid">
           <a href="#">Features</a>
           <a href="#">Enterprise</a>
@@ -30,7 +25,6 @@
           <a href="#">Resources</a>
         </div>
 
-        <!-- RIGHT: Action Buttons -->
         <div class="nav-right">
           <button class="sign-in btn">Sign in</button>
           <button class="download btn">Download</button>
@@ -39,7 +33,6 @@
     </header>
 
     <main>
-      <!-- HERO SECTION: Main introduction area -->
       <section class="hero">
         <div class="main-content">
           <h1 class="main-heading">
@@ -48,11 +41,9 @@
           </h1>
 
           <div class="main-buttons">
-            <!-- CTA Button -->
             <button class="get-started btn">Download for Linux ↓</button>
           </div>
         </div>
-        <!-- Hero Video/Media -->
         <div class="hero-media">
           <video class="hero-video" muted autoplay loop playsinline>
             <source src="./utilities/hero-video.mp4" type="video/mp4" />
@@ -60,7 +51,6 @@
         </div>
       </section>
 
-      <!-- BRAND SECTION: Logos of companies using the product -->
       <section class="brand-section">
         <p>Trusted every day by millions of professional developers.</p>
         <div class="brand-card">
@@ -91,7 +81,6 @@
         </div>
       </section>
 
-      <!-- FEATURE SECTION: Highlighting key features with text and video -->
       <section class="feature-section">
         <div class="part1 features">
           <div class="text1">
@@ -142,11 +131,9 @@
         </div>
       </section>
 
-      <!-- FEEDBACK SECTION: Testimonials or quotes from users -->
       <section class="feedback-section">
         <h2>The new way to build software.</h2>
         <div class="feedback">
-          <!-- Feedback Card 1 -->
           <div class="feedback-card">
             <p>
               It was night and day from one batch to another, adoption went from
@@ -163,7 +150,6 @@
               </div>
             </div>
           </div>
-          <!-- Feedback Card 2 -->
           <div class="feedback-card">
             <p>
               The most useful AI tool that I currently pay for, hands down, is
@@ -181,7 +167,6 @@
               </div>
             </div>
           </div>
-          <!-- Feedback Card 3 -->
           <div class="feedback-card">
             <p>
               The best LLM applications have an autonomy slider: you control how
@@ -199,7 +184,6 @@
               </div>
             </div>
           </div>
-          <!-- Feedback Card 4 -->
           <div class="feedback-card">
             <p>
               Cursor quickly grew from hundreds to thousands of extremely
@@ -218,7 +202,6 @@
               </div>
             </div>
           </div>
-          <!-- Feedback Card 5 -->
           <div class="feedback-card">
             <p>
               It's official. <br /><br />
@@ -238,7 +221,6 @@
               </div>
             </div>
           </div>
-          <!-- Feedback Card 6 -->
           <div class="feedback-card">
             <p>
               It's definitely becoming more fun to be a programmer. It's less
@@ -260,7 +242,6 @@
         </div>
       </section>
 
-      <!-- FRONTIER SECTION: Additional Features/Cards -->
       <section class="frontier">
         <div class="frontier-container">
           <h1 class="frontier-title">Stay on the frontier</h1>
@@ -317,13 +298,11 @@
         </div>
       </section>
 
-      <!-- CHANGELOG SECTION -->
       <section class="changelog">
         <div class="changelog-container">
           <h2 class="changelog-title">Changelog</h2>
 
           <div class="changelog-grid">
-            <!-- Card 1 -->
             <a href="#" class="changelog-card">
               <div class="changelog-meta">
                 <span class="version-pill">2.4</span>
@@ -332,19 +311,16 @@
               <h3>Subagents, Skills, and Image Generation</h3>
             </a>
 
-            <!-- Card 2 -->
             <a href="#" class="changelog-card">
               <span class="date">Jan 16, 2026</span>
               <h3>CLI Agent Modes and Cloud Handoff</h3>
             </a>
 
-            <!-- Card 3 -->
             <a href="#" class="changelog-card">
               <span class="date">Jan 8, 2026</span>
               <h3>New CLI Features and Improved CLI Performance</h3>
             </a>
 
-            <!-- Card 4 -->
             <a href="#" class="changelog-card">
               <div class="changelog-meta">
                 <span class="version-pill">2.4</span>
@@ -357,34 +333,33 @@
         </div>
       </section>
 
-      <!-- JOIN SECTION: Recruitment/Team -->
       <section class="join-section">
         <div class="main-content">
-          <h1>
-            Cursor is an applied team focused on building the future of coding.
-          </h1>
-          <div class="join-us">
-            <button class="get-started">Join us →</button>
-          </div>
-          <div class="team-photo">
-            <img
-              src="./utilities/homepage-team-photo.webp"
-              alt="cursor-team"
-              type="image/png"
-            />
+          <div class="join-card">
+            <div class="join-text">
+              <h1>
+                Cursor is an applied research team focused on building the future
+                of software development.
+              </h1>
+              <a href="#" class="join-link">Join us →</a>
+            </div>
+            <div class="join-photo">
+              <img
+                src="./utilities/homepage-team-photo.webp"
+                alt="cursor-team"
+                type="image/png"
+              />
+            </div>
           </div>
         </div>
       </section>
 
-      <!-- HIGHLIGHTS SECTION: Blog posts/News -->
       <section class="highlights-section">
         <div class="highlights-container">
-          <!-- Left label -->
           <div class="highlights-left">
             <p>Recent highlights</p>
           </div>
 
-          <!-- Right content -->
           <div class="highlights-right">
             <a href="#" class="highlight-card">
               <h3>Introducing Cursor 2.0 and Composer</h3>
@@ -418,7 +393,6 @@
         </div>
       </section>
 
-      <!-- DOWNLOAD SECTION: Bottom CTA -->
       <section class="download-section">
         <div class="download-content">
           <h1 class="download-heading">Try Cursor now.</h1>
@@ -429,11 +403,9 @@
       </section>
     </main>
 
-    <!-- FOOTER SECTION: Links and Copyright -->
     <footer class="site-footer">
       <div class="footer-container">
         <div class="footer-grid">
-          <!-- Column 1 -->
           <div class="footer-col">
             <h4>Product</h4>
             <a href="#">Features</a>
@@ -444,7 +416,6 @@
             <a href="#">Pricing</a>
           </div>
 
-          <!-- Column 2 -->
           <div class="footer-col">
             <h4>Resources</h4>
             <a href="#">Download</a>
@@ -455,7 +426,6 @@
             <a href="#">Status</a>
           </div>
 
-          <!-- Column 3 -->
           <div class="footer-col">
             <h4>Company</h4>
             <a href="#">Careers</a>
@@ -466,7 +436,6 @@
             <a href="#">Brand</a>
           </div>
 
-          <!-- Column 4 -->
           <div class="footer-col">
             <h4>Legal</h4>
             <a href="#">Terms of Service</a>
@@ -475,7 +444,6 @@
             <a href="#">Security</a>
           </div>
 
-          <!-- Column 5 -->
           <div class="footer-col">
             <h4>Connect</h4>
             <a href="#">X</a>
